// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons.tsx store off renders 1`] = `
<div>
  <footer
    class="sc-AxmLO fZfazS"
  >
    <button
      class="sc-AxhCb sc-Axmtr gyNiSL"
    >
      Go Back
    </button>
    <button
      class="sc-AxhCb sc-Axmtr gyNiSL"
    >
      Next
    </button>
    <div
      class="sc-fzozJi dshpyh"
    >
      <button
        class="sc-AxhCb sc-Axmtr fIjFPo"
        tabindex="0"
      >
        1
      </button>
    </div>
  </footer>
</div>
`;

exports[`Buttons.tsx store on render component correctly 1`] = `
<div>
  <footer
    class="sc-AxmLO fZfazS"
  >
    <button
      class="sc-AxhCb sc-Axmtr gFtPZS"
    >
      Previous
    </button>
    <button
      class="sc-AxhCb sc-Axmtr gFtPZS"
    >
      Next
    </button>
    <div
      class="sc-fzozJi dshpyh"
    >
      <button
        class="sc-AxhCb sc-Axmtr fIjFPo"
        tabindex="0"
      >
        1
      </button>
    </div>
  </footer>
</div>
`;
